--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@faker-js/faker": "^9.4.0",
+    "@hookform/resolvers": "^3.10.0",
     "@tailwindcss/vite": "^4.0.3",
     "@types/leaflet": "^1.9.16",
     "leaflet": "^1.9.4",
